--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,20 +1,20 @@
-spring.datasource.url=jdbc:postgresql://dpg-csdb8n2j1k6c739nc3lg-a.frankfurt-postgres.render.com/projektweb2
-spring.datasource.username=lovro
-spring.datasource.password=GDxom6Kwusr2ZXAkvsnrQFWbUt7JWkTj
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.jpa.show-sql=false
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 
 
-spring.security.oauth2.client.registration.auth0.client-id=z3kf6cR0lQmXiuX1H4oAmwhCOx6YtmUJ
-spring.security.oauth2.client.registration.auth0.client-secret=Vn05LHiw9SVYi48JRcHQajcq9fQLVI9o-qRf-YcjO0GzbY_mUklD67e1P-AbnsK1
+spring.security.oauth2.client.registration.auth0.client-id=${AUTH0_CLIENT_ID}
+spring.security.oauth2.client.registration.auth0.client-secret=${AUTH0_CLIENT_SECRET}
 spring.security.oauth2.client.registration.auth0.scope=openid,profile,email
-spring.security.oauth2.client.provider.auth0.issuer-uri=https://dev-zxy3jw1p6co4h8t5.eu.auth0.com/
+spring.security.oauth2.client.provider.auth0.issuer-uri=${SPRING_SECURITY_OAUTH2_CLIENT_PROVIDER_AUTH0_ISSUER_URI}
 spring.security.oauth2.client.registration.auth0.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.auth0.redirect-uri=http://localhost:8080/login/oauth2/code/auth0
 
-spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-zxy3jw1p6co4h8t5.eu.auth0.com/
-spring.security.oauth2.resourceserver.jwt.audiences=https://qr-generator-api
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${SPRING_SECURITY_OAUTH2_CLIENT_PROVIDER_AUTH0_ISSUER_URI}
+spring.security.oauth2.resourceserver.jwt.audiences=${AUTH0_AUDIENCE}
 
 
 <!--netstat -ao |find /i "listening"  nadi pid koji treba ubit-->
