--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+server.port=8080
+
+
 spring.datasource.url=jdbc:postgresql://dpg-csdb8n2j1k6c739nc3lg-a.frankfurt-postgres.render.com/projektweb2
 spring.datasource.username=lovro
 spring.datasource.password=GDxom6Kwusr2ZXAkvsnrQFWbUt7JWkTj
