--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,8 @@ spring.security.oauth2.client.registration.auth0.client-secret=Vn05LHiw9SVYi48JR
 spring.security.oauth2.client.registration.auth0.scope=openid,profile,email
 spring.security.oauth2.client.provider.auth0.issuer-uri=https://dev-zxy3jw1p6co4h8t5.eu.auth0.com/
 spring.security.oauth2.client.registration.auth0.authorization-grant-type=authorization_code
-spring.security.oauth2.client.registration.auth0.redirect-uri=http://localhost:8080/login/oauth2/code/auth0
+spring.security.oauth2.client.registration.auth0.redirect-uri=https://projektweb1-1.onrender.com/login/oauth2/code/auth0
+
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-zxy3jw1p6co4h8t5.eu.auth0.com/
 spring.security.oauth2.resourceserver.jwt.audiences=https://qr-generator-api
